Fixed text alignment to justified

--- a/src/app/components/about-me/about-me.component.css
+++ b/src/app/components/about-me/about-me.component.css
@@ -13,6 +13,6 @@ h1 {
   height: 370px;
 }
 
-.container-2 {
+.container {
   text-align: justify;
 }
